# basicprograms

./: .gitignore  LICENSE  README.md
C/: README.md
C++/: README.md
C++/.devcontainer/: Dockerfile  devcontainer.json  install-gbenchmark.sh  install-gtest.sh
C++/Program-00/: CMakeLists.txt  README.md
C++/Program-00/creational/: abstract_factory.cpp  builder.cpp  factory_method.cpp  prototype.cpp  simple_factory.cpp  singleton.cpp
C++/Program-00/structural/: adapter.cpp  bridge.cpp
C++/Program-01/: CMakeLists.txt  README.md  client.cc  client.h  hash.cc  hash.h  hello_test.cc  kvdb.cc  kvdb.h  kvdb_client.cc  kvdb_server.cc  main.cc  program-01.cpp  server.cc  server.h  status.cc  status.h  sys_socket.h  tcp_socket.h  test.cc  threadpool.cc  threadpool.h
C++/Program-01/tests/: CMakeLists.txt  client_test.cc  hash_test.cc
C++/Program-02/: CMakeLists.txt  README.md
C++/Program-02/example1/: CMakeLists.txt  example.cpp
C++/Program-03/: CMakeLists.txt  README.md  address_map.hpp  main.cc
C/Program-00/: Makefile  README.md  program-00.c
C/Program-01/: Makefile  README.md  program-01.c
C/Program-02/: Makefile  README.md  program-02.c
C/Program-03/: Makefile  README.md  linked-list.c  linked-list.h  program-03.c  tests.c  unittest.h
C/Program-04/: Makefile  README.md  program-04.c
C/Program-05/: Makefile  README.md  matrix.c  matrix.h  program-05.c
C/Program-06/: Makefile  README.md  program-06.c  program-06.i  program-06.s  sum.c  sum.i  sum.s
C/Program-07/: Makefile  README.md  hash_table.c  hash_table.h  prime.c  prime.h  program-07.c
C/Program-08/: Makefile  README.md  broadcaster.c  client.c  listener.c  network.c  network.h  poll.c  pollserver.c  program-08.c  select.c  selectserver.c  server.c  showip.c  talker.c
C/Program-09/: Makefile  README.md  program-09.c
C/Program-10/: Makefile  README.md  program-10.c  program-10.h
C/Program-11/: Makefile  README.md  program-11  program-11.c
C/Program-12/: Makefile  README.md  program-12.c
JavaScript/: README.md
JavaScript/Program-00/: README.md  package-lock.json  package.json  tailwind.config.js
JavaScript/Program-00/public/: index.html
JavaScript/Program-00/src/: App.jsx
JavaScript/Program-00/src/components/: FileExplorer.jsx  Footer.jsx  Navbar.jsx  Readme.jsx  RepoMenu.jsx  RepoNav.jsx  Sidebar.jsx  index.js
JavaScript/Program-00/src/constants/: index.js
JavaScript/Program-01/: api.js  app.js  index.html  styles.css
Python/: README.md
Rust /: README.md
Rust/os/: Cargo.toml  Makefile  README.md
Rust/os/.cargo/: config.toml
Rust/os/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
Rust/os/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
Rust/vector/: Readme.md
Rust/vector/src/: lib.rs  main.rs
k8s/: .dockerignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  prisma.config.ts
k8s/apps/api/: Dockerfile  project.json  tsconfig.app.json  webpack.config.js
k8s/apps/api/src/: main.ts
k8s/apps/app/: Dockerfile  nginx.conf  project.json
k8s/apps/app-e2e/: playwright.config.mts  tsconfig.json
k8s/cerrado/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
k8s/cerrado/deploy/: Chart.yaml  values.local.yaml  values.prod.yaml  values.yaml
k8s/cerrado/minikube/: README.md  postgres.yaml
k8s/deploy/: .helmignore  values.prod.yaml
k8s/deploy/templates/: NOTES.txt  api-deployment.yaml  api-pdb.yaml  app-ingress.yaml  app-pdb.yaml  app-service.yaml  secret.yaml
k8s/k8s/: namespace.yaml  secret.yaml
k8s/k8s/api/: deployment.yaml  pdb.yaml  service.yaml
k8s/k8s/app/: deployment.yaml  ingress.yaml  pdb.yaml  service.yaml
k8s/prisma/: schema.prisma
k8sbkp/: .gitignore  nx.json  package-lock.json
k8sbkp/apps/api-e2e/: project.json
k8sbkp/apps/app/: Dockerfile  nginx.conf  tsconfig.app.json
k8sbkp/apps/app-e2e/: eslint.config.mjs  project.json
k8sbkp/deploy/: Chart.yaml  values.yaml
k8sbkp/deploy/templates/: _helpers.tpl  api-service.yaml  app-deployment.yaml  namespace.yaml
k8sbkp/prisma/: seed.ts
(+55 files in other folders)
